deployment/cicd/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phonebill-front
  labels:
    app: phonebill-front
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: phonebill-front
